[package]
name = "alpmver"
authors = ["Marco Cilloni <m.c.cilloni@gmail.com>"]
version = "0.1.3"
description = "A simple crate to compare package Pacman package versions"
repository = "https://github.com/mcilloni/alpmver"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"], optional = true }
nom = "7.1.1"

[features]
cli = [ "clap" ]

[[bin]]
name = "alpmver"
required-features = ["cli"]
